--- a/index.html
+++ b/index.html
@@ -3,33 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kunzeu Bot</title>
+    <title>Kunzeu Bot | GW2 Market Bot</title>
+    <meta name="description" content="Guild Wars 2 Discord bot for real-time Trading Post prices and market information">
     <link rel="stylesheet" href="styles.css">
-    <!-- Font Awesome para íconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                <img src="bot-logo.png" alt="Bot Logo">
+                <img src="bot-logo.png" alt="Kunzeu Bot Logo">
                 <h1>Kunzeu Bot</h1>
             </div>
             <ul>
-                <li><a href="#inicio">Home</a></li>
-                <li><a href="#caracteristicas">Features</a></li>
-                <li><a href="#comandos">Commands</a></li>
-                <li><a href="#footer">Support</a></li>
+                <li><a href="#inicio"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="#caracteristicas"><i class="fas fa-star"></i> Features</a></li>
+                <li><a href="#comandos"><i class="fas fa-terminal"></i> Commands</a></li>
+                <li><a href="#footer"><i class="fas fa-headset"></i> Support</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section id="inicio" class="hero">
-            <h1>Your Perfect Guild Wars 2 Discord Bot</h1>
-            <p>Get real-time item prices and market information directly in your Discord server</p>
+            <h1>Your Perfect Guild Wars 2 Market Assistant</h1>
+            <p>Get real-time Trading Post prices and market information directly in your Discord server</p>
             <div class="cta-buttons">
-                <a href="https://discord.com/oauth2/authorize?client_id=1134643165735944233" class="btn primary">Invite Bot</a>
+                <a href="https://discord.com/oauth2/authorize?client_id=1134643165735944233" class="btn primary">
+                    <i class="fab fa-discord"></i> Add to Discord
+                </a>
             </div>
         </section>
 
@@ -55,6 +58,11 @@
                     <i class="fas fa-box-open"></i>
                     <h3>Delivery Box</h3>
                     <p>Check your Trading Post delivery box contents</p>
+                </div>
+                <div class="feature-card">
+                    <i class="fas fa-clock"></i>
+                    <h3>Real-time Updates</h3>
+                    <p>Data updated every 5 minutes from the official API</p>
                 </div>
             </div>
         </section>
@@ -108,16 +116,15 @@
 
     <footer id="footer">
         <div class="footer-content">
-            <p>&copy; 2024 Kunzeu Bot - All rights reserved</p>
+            <p>&copy; 2024 Kunzeu - All rights reserved</p>
             <div class="social-links">
-                <a href="#" title="GitHub"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/Kunzeu" title="GitHub"><i class="fab fa-github"></i></a>
                 <a href="https://discord.com/users/552563672162107431" title="Discord"><i class="fab fa-discord"></i></a>
                 <a href="https://x.com/Kunzeuu1" title="X (Twitter)"><i class="fa-brands fa-x"></i></a>
             </div>
         </div>
     </footer>
 
-    <!-- Añade esto justo antes del cierre del </body> -->
     <script src="script.js"></script>
 </body>
 </html>
