--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                 <li><a href="#inicio"><i class="fas fa-home"></i> Home</a></li>
                 <li><a href="#caracteristicas"><i class="fas fa-star"></i> Features</a></li>
                 <li><a href="#comandos"><i class="fas fa-terminal"></i> Commands</a></li>
+                <li><a href="changelog.html"><i class="fas fa-history"></i> Changelog</a></li>
                 <li><a href="#footer"><i class="fas fa-headset"></i> Support</a></li>
+                
             </ul>
         </nav>
     </header>
@@ -113,6 +115,7 @@
                 </div>
             </div>
         </section>
+
     </main>
 
     <footer id="footer">
@@ -125,6 +128,14 @@
             </div>
         </div>
     </footer>
+
+    <div class="support-banner">
+        <div class="support-content">
+            <a href="https://www.patreon.com/c/KunzeuBot" target="_blank" class="patreon-link">
+                <i class="fab fa-patreon"></i> Support on Patreon
+            </a>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
