--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <h1>Kunzeu Bot</h1>
             </div>
             <ul>
-                <li><a href="#inicio"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="#caracteristicas"><i class="fas fa-star"></i> Features</a></li>
-                <li><a href="#comandos"><i class="fas fa-terminal"></i> Commands</a></li>
+                <li><a href="/" class="active" data-scroll><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="index.html" data-scroll="caracteristicas"><i class="fas fa-star"></i> Features</a></li>
+                <li><a href="index.html" data-scroll="comandos"><i class="fas fa-terminal"></i> Commands</a></li>
                 <li><a href="changelog.html"><i class="fas fa-history"></i> Changelog</a></li>
-                <li><a href="#footer"><i class="fas fa-headset"></i> Support</a></li>
+                <li><a href="index.html" data-scroll="footer"><i class="fas fa-headset"></i> Support</a></li>
                 
             </ul>
         </nav>
