--- a/changelog.html
+++ b/changelog.html
@@ -18,11 +18,11 @@
                 <h1>Kunzeu Bot</h1>
             </div>
             <ul>
-                <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="index.html#caracteristicas"><i class="fas fa-star"></i> Features</a></li>
-                <li><a href="index.html#comandos"><i class="fas fa-terminal"></i> Commands</a></li>
+                <li><a href="/" data-scroll><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="/index.html" data-scroll="caracteristicas"><i class="fas fa-star"></i> Features</a></li>
+                <li><a href="/index.html" data-scroll="comandos"><i class="fas fa-terminal"></i> Commands</a></li>
                 <li><a href="changelog.html" class="active"><i class="fas fa-history"></i> Changelog</a></li>
-                <li><a href="index.html#footer"><i class="fas fa-headset"></i> Support</a></li>
+                <li><a href="/index.html" data-scroll="footer"><i class="fas fa-headset"></i> Support</a></li>
                 
             </ul>
         </nav>
