--- a/changelog.html
+++ b/changelog.html
@@ -18,11 +18,11 @@
                 <h1>Kunzeu Bot</h1>
             </div>
             <ul>
-                <li><a href="/" data-scroll><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="/index.html" data-scroll="caracteristicas"><i class="fas fa-star"></i> Features</a></li>
-                <li><a href="/index.html" data-scroll="comandos"><i class="fas fa-terminal"></i> Commands</a></li>
+                <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="index.html" data-scroll-redirect="caracteristicas"><i class="fas fa-star"></i> Features</a></li>
+                <li><a href="index.html" data-scroll-redirect="comandos"><i class="fas fa-terminal"></i> Commands</a></li>
                 <li><a href="changelog.html" class="active"><i class="fas fa-history"></i> Changelog</a></li>
-                <li><a href="/index.html" data-scroll="footer"><i class="fas fa-headset"></i> Support</a></li>
+                <li><a href="index.html" data-scroll-redirect="footer"><i class="fas fa-headset"></i> Support</a></li>
                 
             </ul>
         </nav>
@@ -68,12 +68,14 @@
             <div class="changelog-entry">
                 <div class="changelog-header">
                     <h2>Version 1.1.0</h2>
-                    <span class="date">February 28, 2024</span>
+                    <span class="date">August 05, 2023</span>
                 </div>
                 <div class="changelog-content">
                     <div class="change-category">
                         <h3><i class="fas fa-rocket"></i> New Features</h3>
                         <ul>
+                            <li>Added new material price commands (/t3, /t4, /t5, /t6)</li>
+                            <li>Implemented delivery box checking feature (/delivery)</li>
                             <li>Introduced Mystic Clover calculator (/clovers)</li>
                             <li>Added basic item search functionality (/item)</li>
                         </ul>
@@ -92,7 +94,7 @@
             <div class="changelog-entry">
                 <div class="changelog-header">
                     <h2>Version 1.0.0</h2>
-                    <span class="date">February 1, 2024</span>
+                    <span class="date">July 28, 2023</span>
                 </div>
                 <div class="changelog-content">
                     <div class="change-category">
