--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <body>
     <header>
         <nav>
+            <div class="menu-toggle">
+                <i class="fas fa-bars"></i>
+            </div>
             <div class="logo">
                 <img src="bot-logo.png" alt="Kunzeu Bot Logo">
                 <h1>Kunzeu Bot</h1>
