--- a/index.html
+++ b/index.html
@@ -105,17 +105,26 @@
                     <p>Check T6 material prices</p>
                 </div>
                 <div class="command">
-                    <code>/mc</code>
-                    <p>Check Mystic Coin price</p>
+                    <code>/magic</code>
+                    <p>Check Gift of Condensed Magic price</p>
                 </div>
                 <div class="command">
-                    <code>/ecto</code>
-                    <p>Check Glob of Ectoplasm price</p>
+                    <code>/might</code>
+                    <p>Check Gift of Condensed Might price</p>
                 </div>
                 <div class="command">
                     <code>/gi</code>
                     <p>Displays the price of GOMS and GOJMS</p>
                 </div>
+                <div class="command">
+                    <code>/apikey</code>
+                    <ul class="subcommands">
+                        <li>add - Register your API key</li>
+                        <li>remove - Delete your API key</li>
+                        <li>check - Verify your API key</li>
+                    </ul>
+                </div>
+                
             </div>
         </section>
 
