feat: Actualización de la página web - Actualizado ID del bot, añadida demo GIF, ajustes en descripciones

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moodle Bot</title>
-    <meta name="description" content="Discord bot for Guild Wars 2 players with Trading Post prices, moderation tools, and custom commands">
+    <meta name="description" content="Bot de Discord para Guild Wars 2 con precios del Puesto de Intercambio, herramientas de moderación y comandos personalizados">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -17,136 +17,146 @@
                 <i class="fas fa-bars"></i>
             </div>
             <div class="logo">
-                <img src="assets/img/bot-logo.png" alt="Moodle Bot Logo">
+                <img src="assets/img/bot-logo.png" alt="Logo de Moodle Bot">
                 <h1>Moodle Bot</h1>
             </div>
             <ul>
-                <li><a href="/" class="active"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="#features" data-scroll="features"><i class="fas fa-star"></i> Features</a></li>
-                <li><a href="#commands" data-scroll="commands"><i class="fas fa-terminal"></i> Commands</a></li>
-                <li><a href="changelog.html"><i class="fas fa-history"></i> Changelog</a></li>
-                <li><a href="#footer" data-scroll="footer"><i class="fas fa-headset"></i> Support</a></li>
+                <li><a href="/" class="active"><i class="fas fa-home"></i> Inicio</a></li>
+                <li><a href="#features" data-scroll="features"><i class="fas fa-star"></i> Características</a></li>
+                <li><a href="#commands" data-scroll="commands"><i class="fas fa-terminal"></i> Comandos</a></li>
+                <li><a href="changelog.html"><i class="fas fa-history"></i> Actualizaciones</a></li>
+                <li><a href="#footer" data-scroll="footer"><i class="fas fa-headset"></i> Soporte</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section id="inicio" class="hero">
-            <h1>Your Ultimate Guild Wars 2 Discord Bot</h1>
-            <p>Get real-time Trading Post prices, moderation tools, and custom commands for your Discord server</p>
+            <h1>Tu Bot Definitivo para Guild Wars 2</h1>
+            <p>Obtén precios del Puesto de Intercambio en tiempo real, herramientas de moderación y comandos personalizados para tu servidor de Discord</p>
             <div class="cta-buttons">
-                <a href="https://discord.com/oauth2/authorize?client_id=1134643165735944233" class="btn primary">
-                    <i class="fab fa-discord"></i> Add to Discord
+                <a href="https://discord.com/oauth2/authorize?client_id=1328499706162315334" class="btn primary">
+                    <i class="fab fa-discord"></i> Añadir a Discord
                 </a>
                 <a href="https://github.com/Kunzeu/Moodle" class="btn secondary">
-                    <i class="fab fa-github"></i> View on GitHub
+                    <i class="fab fa-github"></i> Ver en GitHub
                 </a>
             </div>
         </section>
 
+        <section id="demo" class="demo-section" style="text-align: center; padding: 2rem 0; background: rgba(124, 58, 237, 0.05);">
+            <h2>Demostración</h2>
+            <div class="demo-container" style="max-width: 500px; margin: 0 auto; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06); border-radius: 8px; overflow: hidden;">
+                <img src="https://media.discordapp.net/attachments/1327316574650237083/1363691861671149669/ezgif-50371187275eb1.gif?ex=6827ea03&is=68269883&hm=bb2ae77d7d55536d0bca48b730292bc18c767388dc9b9d685fef560c2f5959bd&=&width=644&height=967" 
+                     alt="Demostración de Moodle Bot" 
+                     style="width: 100%; height: auto; display: block;"
+                     loading="lazy">
+            </div>
+        </section>
+
         <section id="features">
-            <h2>Features</h2>
+            <h2>Características</h2>
             <div class="features-grid">
                 <div class="feature-card">
                     <i class="fas fa-coins"></i>
-                    <h3>Trading Post Integration</h3>
-                    <p>Real-time prices for items, materials, and gems</p>
+                    <h3>Integración con el Puesto de Intercambio</h3>
+                    <p>Precios en tiempo real de objetos, materiales y gemas</p>
                 </div>
                 <div class="feature-card">
                     <i class="fas fa-shield-alt"></i>
-                    <h3>Moderation Tools</h3>
-                    <p>Auto-timeout, role management, and custom commands</p>
+                    <h3>Herramientas de Moderación</h3>
+                    <p>Timeout automático, gestión de roles y comandos personalizados</p>
                 </div>
                 <div class="feature-card">
                     <i class="fas fa-calculator"></i>
-                    <h3>Advanced Calculations</h3>
-                    <p>Calculate prices for Mystic Clovers, Gifts, and more</p>
+                    <h3>Cálculos Avanzados</h3>
+                    <p>Calcula precios de Tréboles Místicos, Dones y más</p>
                 </div>
                 <div class="feature-card">
                     <i class="fas fa-clock"></i>
-                    <h3>Daily Features</h3>
-                    <p>Check daily fractals and server time</p>
+                    <h3>Funciones Diarias</h3>
+                    <p>Consulta los fractales diarios.</p>
                 </div>
                 <div class="feature-card">
                     <i class="fas fa-search"></i>
-                    <h3>Inventory Search</h3>
-                    <p>Search items across material bank, inventory, and storage</p>
+                    <h3>Búsqueda de Inventario</h3>
+                    <p>Busca objetos en el banco de materiales, inventario y almacenamiento</p>
                 </div>
                 <div class="feature-card">
                     <i class="fas fa-cog"></i>
-                    <h3>Custom Commands</h3>
-                    <p>Create, edit, and manage custom server commands</p>
+                    <h3>Comandos Personalizados</h3>
+                    <p>Crea, edita y gestiona comandos personalizados del servidor</p>
                 </div>
             </div>
         </section>
 
         <section id="commands">
-            <h2>Main Commands</h2>
+            <h2>Comandos Principales</h2>
             <div class="commands-list">
                 <div class="command-category">
-                    <h3>Trading Post Commands</h3>
+                    <h3>Comandos del Puesto de Intercambio</h3>
                     <div class="command">
                         <code>/item &lt;search&gt;</code>
-                        <p>Check item prices</p>
+                        <p>Consultar precios de objetos</p>
                     </div>
                     <div class="command">
                         <code>/delivery</code>
-                        <p>Check Trading Post delivery box</p>
+                        <p>Revisar el buzón del Puesto de Intercambio</p>
                     </div>
                     <div class="command">
                         <code>/tpcompra</code>
-                        <p>View your purchase orders</p>
+                        <p>Ver tus órdenes de compra</p>
                     </div>
                     <div class="command">
                         <code>/tpventa</code>
-                        <p>View your sale listings</p>
+                        <p>Ver tus listados de venta</p>
                     </div>
                 </div>
 
                 <div class="command-category">
-                    <h3>Material Commands</h3>
+                    <h3>Comandos de Materiales</h3>
                     <div class="command">
-                        <code>/t3</code> to <code>/t6</code>
-                        <p>Check material tier prices</p>
+                        <code>/t3</code> a <code>/t6</code>
+                        <p>Consultar precios de materiales por nivel</p>
                     </div>
                     <div class="command">
                         <code>/materials</code>
-                        <p>View Gift material prices</p>
+                        <p>Ver precios de materiales para Dones de magia y poder</p>
                     </div>
                     <div class="command">
                         <code>/gift</code>
-                        <p>Check GOMS, GOJMS, GOJW prices</p>
+                        <p>Consultar precios de GOMS, GOJMS, GOJW</p>
                     </div>
                 </div>
 
                 <div class="command-category">
-                    <h3>Utility Commands</h3>
+                    <h3>Comandos de Utilidad</h3>
                     <div class="command">
                         <code>/search</code>
-                        <p>Search across inventories</p>
+                        <p>Buscar en todos los inventarios</p>
                     </div>
                     <div class="command">
                         <code>/hora</code>
-                        <p>Check server time</p>
+                        <p>Consultar hora de algunos paises</p>
                     </div>
                     <div class="command">
                         <code>/fractales</code>
-                        <p>View daily fractals</p>
+                        <p>Ver fractales diarios</p>
                     </div>
                     <div class="command">
                         <code>/gemas</code>
-                        <p>Check current gem prices</p>
+                        <p>Consultar precios actuales de gemas</p>
                     </div>
                 </div>
 
                 <div class="command-category">
-                    <h3>API Management</h3>
+                    <h3>Gestión de API</h3>
                     <div class="command">
                         <code>/apikey</code>
                         <ul class="subcommands">
-                            <li>add - Register your API key</li>
-                            <li>remove - Delete your API key</li>
-                            <li>check - Verify your API key</li>
+                            <li>add - Registrar tu clave API</li>
+                            <li>remove - Eliminar tu clave API</li>
+                            <li>check - Verificar tu clave API</li>
                         </ul>
                     </div>
                 </div>
@@ -156,22 +166,9 @@
 
     <footer id="footer">
         <div class="footer-content">
-            <div class="footer-section">
-                <h3>About Moodle Bot</h3>
-                <p>A powerful Discord bot for Guild Wars 2 players, featuring Trading Post integration, moderation tools, and custom commands.</p>
-            </div>
-            <div class="footer-section">
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="#features">Features</a></li>
-                    <li><a href="#commands">Commands</a></li>
-                    <li><a href="changelog.html">Changelog</a></li>
-                    <li><a href="https://github.com/Kunzeu/Moodle">GitHub</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h3>Connect</h3>
-                <div class="social-links">
+            <div class="footer-section" style="text-align: center; width: 100%;">
+                <h3>Contacto</h3>
+                <div class="social-links" style="justify-content: center;">
                     <a href="https://github.com/Kunzeu" title="GitHub"><i class="fab fa-github"></i></a>
                     <a href="https://discord.com/users/552563672162107431" title="Discord"><i class="fab fa-discord"></i></a>
                     <a href="https://x.com/Kunzeuu1" title="X (Twitter)"><i class="fa-brands fa-x"></i></a>
@@ -179,14 +176,14 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Moodle Bot - All rights reserved</p>
+            <p>&copy; 2025 Moodle Bot - Todos los derechos reservados</p>
         </div>
     </footer>
 
     <div class="support-banner">
         <div class="support-content">
             <a href="https://www.patreon.com/c/MoodleBot" target="_blank" class="patreon-link">
-                <i class="fab fa-patreon"></i> Support on Patreon
+                <i class="fab fa-patreon"></i> Apoyar en Patreon
             </a>
         </div>
     </div>
