feat: Actualización de la página web - Actualizado ID del bot, añadida demo GIF, ajustes en descripciones

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moodle Bot</title>
-    <meta name="description" content="Bot de Discord para Guild Wars 2 con precios del Puesto de Intercambio, herramientas de moderación y comandos personalizados">
+    <meta name="description" content="Bot de Discord para Guild Wars 2 con precios del Trading Post, herramientas de moderación y comandos personalizados">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
