refactor: Rebrand to Moodle Bot and improve website structure - Reorganize project with assets directory, update branding, add new features, improve UI/UX, enhance mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <section id="demo" class="demo-section" style="text-align: center; padding: 2rem 0; background: rgba(124, 58, 237, 0.05);">
             <h2>Demostración</h2>
             <div class="demo-container" style="max-width: 500px; margin: 0 auto; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06); border-radius: 8px; overflow: hidden;">
-                <img src="https://media.discordapp.net/attachments/1327316574650237083/1363691861671149669/ezgif-50371187275eb1.gif?ex=6827ea03&is=68269883&hm=bb2ae77d7d55536d0bca48b730292bc18c767388dc9b9d685fef560c2f5959bd&=&width=644&height=967" 
+                <img src="https://i.gyazo.com/a9c88dfbfa6b3deeac5117f1bb5225dc.gif" 
                      alt="Demostración de Moodle Bot" 
                      style="width: 100%; height: auto; display: block;"
                      loading="lazy">
