--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moodle Bot</title>
+    <title>Qaliz Bot</title>
     <meta name="description" content="Bot de Discord para Guild Wars 2 con precios del Trading Post, herramientas de moderación y comandos personalizados">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -17,8 +17,8 @@
                 <i class="fas fa-bars"></i>
             </div>
             <div class="logo">
-                <img src="assets/img/bot-logo.png" alt="Logo de Moodle Bot">
-                <h1>Moodle Bot</h1>
+                <img src="assets/img/logo.png" alt="Logo de Qaliz Bot">
+                <h1>Qaliz Bot</h1>
             </div>
             <ul>
                 <li><a href="/" class="active"><i class="fas fa-home"></i> Inicio</a></li>
@@ -33,7 +33,7 @@
     <main>
         <section id="inicio" class="hero">
             <h1>Tu Bot Definitivo para Guild Wars 2</h1>
-            <p>Obtén precios del Puesto de Intercambio en tiempo real, herramientas de moderación y comandos personalizados para tu servidor de Discord</p>
+            <p>Obtén precios del Trading Post en tiempo real, herramientas de moderación y comandos personalizados para tu servidor de Discord</p>
             <div class="cta-buttons">
                 <a href="https://discord.com/oauth2/authorize?client_id=1328499706162315334" class="btn primary">
                     <i class="fab fa-discord"></i> Añadir a Discord
@@ -45,7 +45,7 @@
             <h2>Demostración</h2>
             <div class="demo-container" style="max-width: 500px; margin: 0 auto; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06); border-radius: 8px; overflow: hidden;">
                 <img src="https://i.gyazo.com/a9c88dfbfa6b3deeac5117f1bb5225dc.gif" 
-                     alt="Demostración de Moodle Bot" 
+                     alt="Demostración de Qaliz Bot" 
                      style="width: 100%; height: auto; display: block;"
                      loading="lazy">
             </div>
@@ -173,13 +173,13 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Moodle Bot - Todos los derechos reservados</p>
+            <p>&copy; 2025 Qaliz Bot - Todos los derechos reservados</p>
         </div>
     </footer>
 
     <div class="support-banner">
         <div class="support-content">
-            <a href="https://www.patreon.com/c/MoodleBot" target="_blank" class="patreon-link">
+            <a href="https://www.patreon.com/c/QalizBot" target="_blank" class="patreon-link">
                 <i class="fab fa-patreon"></i> Apoyar en Patreon
             </a>
         </div>
